<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="question_oceans">1. The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">2. The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">3. The Source of the Nile River is in Egypt</string>
    <string name="question_americas">4. The Amazon River is the longest River in the Americas</string>
    <string name="question_asia">5. Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
    <string name="previous_button">Prev</string>
    <string name="no_prev">No Preview</string>
    <string name="title_activity_cheat">Cheat</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong!</string>
    <string name="hello_world">Hello world!</string>


</resources>
